--- a/package.json
+++ b/package.json
@@ -20,13 +20,21 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.1.0",
     "caniuse-lite": "^1.0.30001363",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
+    "postcss-loader": "^7.0.0",
     "prettier": "^2.1.2",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.0.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.3"
   }
 }
