Tailwind and Router setup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "SAR-dev",
   "license": "ISC",
   "dependencies": {
+    "kutty": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
