--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.2",
     "babel-loader": "^8.1.0",
     "caniuse-lite": "^1.0.30001363",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.2",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
