--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config config.webpack.js --mode development"
+    "dev": "webpack serve --config config.webpack.js --mode development",
+    "test": "jest"
   },
   "author": "SAR-dev",
   "license": "ISC",
   "dependencies": {
-    "kutty": "^0.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0"
@@ -23,13 +23,16 @@
     "@testing-library/react": "^12.1.5",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^28.1.2",
     "babel-loader": "^8.1.0",
     "caniuse-lite": "^1.0.30001363",
     "css-loader": "^6.7.1",
+    "enzyme": "^3.11.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.2",
+    "kutty": "^0.6.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
@@ -41,5 +44,10 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.3"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./setup-tests.js"
+    ]
   }
 }
